@@ -14,7 +14,8 @@ extern void gdbfreeplay (int socket_fd);
 
 extern unsigned long target_pc_from_T (char *tpacket);
 extern unsigned long target_pc_from_G (char *gpacket);
-extern unsigned long target_pc_from_g (FILE *infile);
+extern unsigned long target_pc_from_g (char *gpacket);
+
 extern char *target_compose_T_packet (char *origTpacket, 
 				      unsigned long pc,
 				      int breakpoint_p);
